# herox

./: LICENSES.md  README.md
herox_control/: CMakeLists.txt  package.xml
herox_control/config/: .roboteq_motor_controllers_v60.eds.swp  control.yaml  control_vel.yaml  driver.yaml  roboteq_motor_controllers_v60.eds  teleop_thrustmaster.yaml  teleop_xbox.yaml
herox_control/launch/: control.launch  control_vel.launch  teleop.launch
herox_control/scripts/: joystick_estop.py
herox_coordinator/: CMakeLists.txt  package.xml
herox_description/: CMakeLists.txt  package.xml
herox_description/launch/: description.launch  ridgeback_description.launch
herox_description/urdf/: accessories.urdf.xacro  herox.gazebo  herox_amr.urdf.xacro  ridgeback.urdf.xacro
herox_description/urdf/accessories/: hokuyo_ust-10lx_mount.urdf.xacro  sick_nanoscan3_mount.urdf.xacro
herox_description/urdf/configs/: dual_sick_lasers
herox_navigation/: CMakeLists.txt  package.xml
herox_navigation/launch/: amcl_demo.launch  gmapping_demo.launch
herox_navigation/launch/include/: amcl.launch  gmapping.launch  move_base.launch
herox_navigation/maps/: robco_v2.yaml  robco_v2_clean.yaml
herox_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
herox_navigation/params/base_local_planner/: global_planner_params.yaml  local_planner_params.yaml  move_base_params.yaml
herox_navigation/params/base_local_planner/costmaps/: costmap_common_params.yaml  global_costmap_params.yaml
herox_navigation/params/dwa_local_planner/: global_planner_params.yaml  local_planner_params.yaml  move_base_params.yaml
herox_navigation/params/dwa_local_planner/costmaps/: costmap_common_params.yaml  local_costmap_params.yaml
herox_navigation/params/eband_local_planner/: local_planner_params.yaml  move_base_params.yaml
herox_navigation/params/eband_local_planner/costmaps/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
herox_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
herox_navigation/params/teb_local_planner/: .local_planner_params.yaml.swp  local_planner_params.yaml  move_base_params.yaml
herox_navigation/params/teb_local_planner/costmaps/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
(+16 files in other folders)
