<?xml version="1.0"?>
<package format="2">
  <name>herox_control</name>
  <version>0.1.0</version>
  <description>Controllers for HEROX AMR</description>
  <maintainer email="bernhard.vorhofer@tum.de">Bernhard Vorhofer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>

  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>canopen_motor_node</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <controller_interface plugin="${prefix}/mecanum_drive_controller_plugins.xml"/>
  </export>
</package>
