<?xml version="1.0"?>
<package>
  <name>herox_description</name>
  <version>0.1.0</version>
  <description>URDF robot description for HEROX AMR</description>

  <maintainer email="bernhard.vorhofer@tum.de">Bernhard Vorhofer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
